--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <h3> Hope! we are learning!</h3>
 <h4> Integrated JMeter Job as well - Testing 2nd time</h4>
 <h5> Last Demo on Continuous Testing in DevOps </h5>
-  <h1>edited by nikhil</h1>
+  <h1>edited by nikhil balan</h1>
 </body>
 </html>
